# Timbre

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  docker-compose.cuda.yml  docker-compose.yml  pyproject.toml  voice-gateway-plan.md
Hermes-Agent/hermes-timbre/: README.md  __init__.py  hermes_timbre.py  plugin.yaml  pyproject.toml
Hermes-Agent/hermes-timbre/dashboard/: manifest.json  plugin_api.py
src/timbre/: audio.py  cli.py  config.py  errors.py  eventlog.py  manager.py  models.py  server.py  wav.py
src/timbre/api/: __init__.py  discovery.py  qwen.py  speech.py  transcribe.py  voices.py
src/timbre/backends/: __init__.py  base.py  registry.py
src/timbre/backends/stt/: parakeet.py  whisper.py
src/timbre/backends/tts/: __init__.py  pocket.py  qwen3.py  supertonic.py
src/timbre/voices/: __init__.py  store.py
src/timbre/web/: __init__.py
tests/: test_config.py  test_manager.py  test_models.py  test_parakeet_backend.py  test_qwen3_backend.py  test_qwen_api.py  test_server.py  test_supertonic_backend.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css
