[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "timbre-voice"
version = "0.1.0"
description = "OpenAI-compatible local voice gateway for swappable STT and TTS backends."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Spadav" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "pydub>=0.25",
  "huggingface-hub>=0.24",
]

[project.optional-dependencies]
pocket = ["pocket-tts>=0.1", "soundfile>=0.12"]
whisper = ["faster-whisper>=1.0"]
supertonic = ["supertonic>=0.1", "soundfile>=0.12"]
parakeet = ["onnx-asr[hub]>=0.10.0", "onnxruntime>=1.18", "numpy>=2", "soundfile>=0.12"]
qwen3 = ["qwen-tts>=0.0.4", "torch>=2.4", "soundfile>=0.12", "librosa>=0.10"]
gpu = ["onnxruntime-gpu>=1.18"]
ui = []
dev = ["pytest>=8.2", "pytest-asyncio>=0.25", "httpx>=0.27", "ruff>=0.6"]
all = [
  "pocket-tts>=0.1",
  "faster-whisper>=1.0",
  "supertonic>=0.1",
  "onnx-asr[hub]>=0.10.0",
  "onnxruntime>=1.18",
  "numpy>=2",
  "soundfile>=0.12",
]

[project.scripts]
timbre = "timbre.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/timbre"]

[tool.hatch.build.targets.wheel.force-include]
"src/timbre/voices" = "timbre/voices"
"web/dist" = "timbre/web/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
